--- a/index.html
+++ b/index.html
@@ -37,15 +37,21 @@
       <div class="footer">
         <div class="contacto">
           <h1>Contacto</h1>
+          <p>josuecss@yahoo.com <br>
+          Calle 5 con 3 <br>
+          Telefono 809-989-0010</p>
         </div>
         <div class="politicas">
           <h1>Términos</h1>
+          <p>Conoce Nuestros Terminos y Condiciones</p>
         </div>
         <div class="redes-sociales">
           <h1>Redes Sociales</h1>
+          <p>Comparte en nuestras Redes Sociales</p>
         </div>
         <div class="copyright">
           <h1>Derechos</h1>
+          <p>@copyright 2019</p>
         </div>
       </div>
     </footer>
