--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         <img src="images/paisaje1_2.jpg">
       </picture>
     </section>
+    
     <section class="imgscolumn">
       <article class="imagenes">
-        <img src="images/articulo_paisaje1.jpg" alt="" width="400">
+        <img src="images/articulo_paisaje1.jpg" alt="" width="380">
+        <p>Retratos</p>
       </article>
       <article class="imagenes">
-        <img src="images/articulo_paisaje2.jpg" alt="" width="400">
+        <img src="images/articulo_paisaje2.jpg" alt="" width="380">
+        <p>Retratos</p>
       </article>
     </section>
 
