--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Comenzando con la Fotografia | Inicio</title>
   </head>
   <body>
-    <header>
+    <div class="contenido">
+      <header>
       <h1>Comenzando con la fotografia</h1>
       <nav class="menu">
         <ul>
@@ -23,19 +24,17 @@
         <source media="(min-width: 480px)" srcset="images/paisaje1_2.jpg">
         <img src="images/paisaje1_2.jpg">
       </picture>
-    </section>
-    
+    </section>    
     <section class="imgscolumn">
       <article class="imagenes">
         <img src="images/articulo_paisaje1.jpg" alt="" width="380">
-        <p>Retratos</p>
+        <p>Paisajes</p>
       </article>
       <article class="imagenes">
-        <img src="images/articulo_paisaje2.jpg" alt="" width="380">
+        <img src="images/articulo_retrato1.jpg" alt="" width="380">
         <p>Retratos</p>
       </article>
     </section>
-
     <footer>
       <div class="footer">
         <div class="contacto">
@@ -54,9 +53,10 @@
         </div>
         <div class="copyright">
           <h1>Derechos</h1>
-          <p>@copyright 2019</p>
+          <p>Josue Cespedes © 2019</p>
         </div>
       </div>
     </footer>
+    </div>
   </body>
 </html>
