--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="contenido">
-      <header>
+    <header>
       <h1>Comenzando con la fotografia</h1>
       <nav class="menu">
         <ul>
@@ -27,11 +27,11 @@
     </section>    
     <section class="imgscolumn">
       <article class="imagenes">
-        <img src="images/articulo_paisaje1.jpg" alt="" width="380">
+        <img id="paisaje" src="images/articulo_paisaje1.jpg" alt="" width="380">
         <p>Paisajes</p>
       </article>
       <article class="imagenes">
-        <img src="images/articulo_retrato1.jpg" alt="" width="380">
+        <img id="retrato" src="images/articulo_retrato1.jpg" alt="" width="380">
         <p>Retratos</p>
       </article>
     </section>
