--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="footer">
         <div class="contacto">
           <h1>Contacto</h1>
-          <p>josuecss@yahoo.com <br>
+          <a href="mailto:josuecss@yahoo.com?subject=Contacto" "Escríbema">josuecss@yahoo.com</a><br>
           Calle 5 con 3 <br>
           Telefono 809-989-0010</p>
         </div>
@@ -50,6 +50,8 @@
         <div class="redes-sociales">
           <h1>Redes Sociales</h1>
           <p>Comparte en nuestras Redes Sociales</p>
+          <a href="https://facebook.com/josuec.io" target="_blank"><img src="images/facebook.png"alt="Entra a mi Facebook"> Comenzando Fotografía</a>
+          <a href="https://www.instagram.com/josuec.io" target="_blank"><img src="images/instagram.png"alt="Entra a mi Instagram"> @ComenzandoFotografia</a>
         </div>
         <div class="copyright">
           <h1>Derechos</h1>
