--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
         <source media="(min-width: 480px)" srcset="images/paisaje1_2.jpg">
         <img src="images/paisaje1_2.jpg">
       </picture>
-    </section>    
+    </section>
     <section class="imgscolumn">
       <article class="imagenes">
-        <img id="paisaje" src="images/articulo_paisaje1.jpg" alt="" width="340">
-        <p>Paisajes</p>
+        <a href="paisajes.html"><img id="paisaje" src="images/articulo_paisaje1.jpg" alt="" width="340"><p>Paisajes</p></a>
       </article>
       <article class="imagenes">
-        <img id="retrato" src="images/articulo_retrato1.jpg" alt="" width="340">
-        <p>Retratos</p>
+        <a href="retratos.html"><img id="retrato" src="images/articulo_retrato1.jpg" alt="" width="340"><p>Retratos</p></a>
       </article>
     </section>
     <footer>
