--- a/paisajes.html
+++ b/paisajes.html
@@ -12,27 +12,20 @@
       <h1>Comenzando con la fotografia</h1>
       <nav class="menu">
         <ul>
-          <li><a href="index.html" class="activo">Inicio</a></li>
-          <li><a href="paisajes.html">Paisajes</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="paisajes.html" class="activo">Paisajes</a></li>
           <li><a href="retratos.html">Retratos</a></li>
         </ul>
       </nav>
     </header>
-    <section class="bannerimg">
-      <picture>
-        <source media="(min-width: 768px)" srcset="images/paisaje1.jpg">
-        <source media="(min-width: 480px)" srcset="images/paisaje1_2.jpg">
-        <img src="images/paisaje1_2.jpg">
-      </picture>
-    </section>
     <section class="imgscolumn">
       <article class="imagenes">
-        <img id="paisaje" src="images/articulo_paisaje1.jpg" alt="" width="340">
-        <p>Paisajes</p>
-      </article>
-      <article class="imagenes">
-        <img id="retrato" src="images/articulo_retrato1.jpg" alt="" width="340">
-        <p>Retratos</p>
+        <img class="blur" src="images/articulo_paisaje1.jpg" alt="Efecto desenfocado" width="240">
+        <img class="gray" src="images/articulo_paisaje1.jpg" alt="Efecto escala de grises" width="240">
+        <img class="sepia" src="images/articulo_paisaje1.jpg" alt="Efecto sepia" width="240">
+        <img class="gray" src="images/articulo_paisaje1.jpg" alt="Efecto escala de grises" width="240">
+        <img src="images/articulo_paisaje1.jpg" alt="Imagen normal" width="240">
+        <img class="gray" src="images/articulo_paisaje1.jpg" alt="Efecto escala de grises" width="240">
       </article>
     </section>
     <footer>
